# mist

./: .gitignore  README.md  optional-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: python-tests.yml
src/mist/: __init__.py  __main__.py  bracketeer.py  cli.py  config.py  core.py  errors.py  files.py  genrefier.py  log.py  messages.py  name_purifier.py  platform.py  shenanigans.py  title_purifier.py  utils.py
src/mist/cli/: __init__.py  completors.py  utils.py
src/mist/cli/commands/: __init__.py  clone.py  config.py  fetch.py  help.py  init.py  ls_files.py  ls_remote.py  merge.py  pull.py  remote.py  status.py
src/mist/commands/: config.py  fetch.py  remote.py  status.py
src/mist/core/: __init__.py  remote.py
src/mist/metadata/: __init__.py  apl.py  bc.py  lfm.py  local.py  sc.py  scapi.py  scrape_utils.py  worktree.py  yt.py  ytapi.py
src/mist/tags/: __init__.py  imaging.py
tests/: __init__.py  test.py  test_clone.py
tests/core/: __init__.py  test_clone.py  test_init.py  test_remote.py
tests/metadata/: __init__.py
